# Telegram-Chat-Bot

./: .gitignore  README.md  app.py  main.py  practice.ipynb  pyproject.toml  requirements.txt  test_memory_logic.py
Data/: Ayush Ranjan Soni_AI_ML.docx
RAG/: data_ingestion.py  data_retriever.py  memory.py  model.py
Vision/: caption.py
db/: index.faiss  index.pkl
